--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,20 @@ body {
 body {
   background-color: #ffffff;
 }
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.bg-animated-gradient {
+  background-size: 300% 300%;
+  animation: gradientMove 10s ease infinite;
+}
